--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -1,52 +1,53 @@
 <html>
 
 <body ng-controller="FormController">
-    <div class="row">
-            <h1 class="page-header">Forms</h1>
+<div class="row">
+    <h1 class="page-header">Forms</h1>
 
-            <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a>Forms</a></li>
-                <li role="presentation"><a href="#/fields">Fields</a></li>
-            </ul>
+    <div ng-show="alertMessage" class="alert alert-danger" role="alert">{{alertMessage}}</div>
 
-            <div class="table-responsive">
-                <table class="table table-striped table-bordered table-condensed">
-                        <tr>
-                            <th bgcolor="gray">
-                                <a href="#">
-                                    <span class="glyphicon glyphicon-triangle-bottom"></span>
-                                </a>
-                                Form Name
-                            </th>
-                            <th bgcolor="gray">
-                                <a href="#">
-                                    <span class="glyphicon glyphicon-triangle-bottom"></span>
-                                </a>
-                                Action
-                            </th>
-                        </tr>
-                        <tr>
-                            <td><input type="text" placeholder="Form name" class="form-control" ng-model="formName"></td>
-                            <td class="text-nowrap">
-                                <button type="button" class="btn btn-primary add-right-pad" ng-click="addForm(formName)">
-                                    <span class="glyphicon glyphicon-plus"></span>
-                                </button>
-                                <button type="button" class="btn btn-success" ng-click="updateForm(formName)">
-                                    <span class="glyphicon glyphicon-ok"></span>
-                                </button></td>
-                        </tr>
+    <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a>Forms</a></li>
+        <li role="presentation"><a href="#/fields">Fields</a></li>
+    </ul>
 
-                       <tr ng-repeat="form in forms">
-                           <td><a>{{form.title}} </a></td>
-                           <td>
-                               <a ng-click="deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
-                               <a ng-click="selectForm($index)"><span class="glyphicon glyphicon-pencil"></span></a></td>
-                       </tr>
-                </table>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered table-condensed">
+            <tr>
+                <th bgcolor="gray">
+                    <a href="#">
+                        <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    </a>
+                    Form Name
+                </th>
+                <th bgcolor="gray">
+                    <a href="#">
+                        <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    </a>
+                    Action
+                </th>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Form name" class="form-control" ng-model="formName"></td>
+                <td class="text-nowrap">
+                    <button type="button" class="btn btn-primary add-right-pad" ng-click="addForm(formName)">
+                        <span class="glyphicon glyphicon-plus"></span>
+                    </button>
+                    <button type="button" class="btn btn-success" ng-click="updateForm(formName)">
+                        <span class="glyphicon glyphicon-ok"></span>
+                    </button></td>
+            </tr>
 
-             </div>
-        </div>
+            <tr ng-repeat="form in forms">
+                <td><a>{{form.title}} </a></td>
+                <td>
+                    <a ng-click="deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
+                    <a ng-click="selectForm($index)"><span class="glyphicon glyphicon-pencil"></span></a></td>
+            </tr>
+        </table>
+
+    </div>
+</div>
 </body>
 
 </html>
-
