--- a/public/project/views/header/header.view.html
+++ b/public/project/views/header/header.view.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/home">HeadSpin</a>
+            <a class="navbar-brand" href="#/home">myMusic</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
