--- a/public/project/views/createPlaylist/createPlaylist.view.html
+++ b/public/project/views/createPlaylist/createPlaylist.view.html
@@ -1,59 +1,39 @@
 <html>
-<body ng-controller="CreateEvent">
+<body ng-controller="CreatePlaylist">
 <div class="container-fluid">
     <div class="row">
-      <h1 class="page-header">Create your event here</h1>
+        <h1 class="page-header">Create your Playlist here</h1>
         <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
         <form class="form-horizontal">
 
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="eName"> Event Name</label>
+                <label class="col-sm-2 control-label" for="pName"> Playlist Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" placeholder="Event Name" id="eName" ng-model="event.Name">
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="col-sm-2 control-label" for="eVenue">Location</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" placeholder="Event Venue" id="eVenue" ng-model="event.location">
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="col-sm-2 control-label" for="esDate"> Starts </label>
-                <div class="col-sm-10">
-                    <input type="date" class="form-control" id="esDate" ng-model="event.startDate">
-                    <input type="time" class="form-control"  ng-model="event.startTime">
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="col-sm-2 control-label" for="eeDate"> Ends </label>
-                <div class="col-sm-10">
-                    <input type="date" class="form-control" id="eeDate" ng-model="event.endDate">
-                    <input type="time" class="form-control"  ng-model="event.endTime">
+                    <input type="text" class="form-control" placeholder="Playlist Name" id="pName" ng-model="playlist.Name">
                 </div>
             </div>
 
 
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="eDesc">Description</label>
+                <label class="col-sm-2 control-label" for="cDate"> Create Date </label>
                 <div class="col-sm-10">
-                    <textarea class="form-control" id="eDesc" row="8" ng-model="event.desc"></textarea>
+                    <input type="date" class="form-control" id="cDate" ng-model="playlist.createDate">
+                    <input type="time" class="form-control"  ng-model="playlist.createTime">
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="col-sm-2 control-label" for="eImage">Event Image</label>
-                <div class="col-sm-offset-2 col-sm-10">
-                    <input type="file" id="eImage" ng-model="event.image">
+                <label class="col-sm-2 control-label" for="Desc">Description</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" id="Desc" row="8" ng-model="playlist.desc"></textarea>
                 </div>
             </div>
+
+
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <a class="btn btn-primary" role="button" ng-click="createEvent(event)">Create Event</a>
+                    <a class="btn btn-primary" role="button" ng-click="createPlaylist(playlist)">Create Playlist</a>
                 </div>
             </div>
 
@@ -62,3 +42,6 @@
 </div>
 </body>
 </html>
+
+
+
