--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -1,53 +1,54 @@
 <html>
 
 <body ng-controller="FormController">
-<div class="row">
-    <h1 class="page-header">Forms</h1>
+    <div class="row">
+            <h1 class="page-header">Forms</h1>
 
-    <div ng-show="alertMessage" class="alert alert-danger" role="alert">{{alertMessage}}</div>
+            <div ng-show="model.alertMessage" class="alert alert-danger" role="alert">{{model.alertMessage}}</div>
 
-    <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a>Forms</a></li>
-        <li role="presentation"><a href="#/fields">Fields</a></li>
-    </ul>
+            <ul class="nav nav-tabs">
+                <li role="presentation" class="active"><a>Forms</a></li>
+                <li role="presentation"><a href="#/fields">Fields</a></li>
+            </ul>
 
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered table-condensed">
-            <tr>
-                <th bgcolor="gray">
-                    <a href="#">
-                        <span class="glyphicon glyphicon-triangle-bottom"></span>
-                    </a>
-                    Form Name
-                </th>
-                <th bgcolor="gray">
-                    <a href="#">
-                        <span class="glyphicon glyphicon-triangle-bottom"></span>
-                    </a>
-                    Action
-                </th>
-            </tr>
-            <tr>
-                <td><input type="text" placeholder="Form name" class="form-control" ng-model="formName"></td>
-                <td class="text-nowrap">
-                    <button type="button" class="btn btn-primary add-right-pad" ng-click="addForm(formName)">
-                        <span class="glyphicon glyphicon-plus"></span>
-                    </button>
-                    <button type="button" class="btn btn-success" ng-click="updateForm(formName)">
-                        <span class="glyphicon glyphicon-ok"></span>
-                    </button></td>
-            </tr>
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered table-condensed">
+                        <tr>
+                            <th bgcolor="gray">
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                                </a>
+                                Form Name
+                            </th>
+                            <th bgcolor="gray">
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                                </a>
+                                Action
+                            </th>
+                        </tr>
+                        <tr>
+                            <td><input type="text" placeholder="Form name" class="form-control" ng-model="model.formName"></td>
+                            <td class="text-nowrap">
+                                <button type="button" class="btn btn-primary add-right-pad" ng-click="model.addForm(model.formName)">
+                                    <span class="glyphicon glyphicon-plus"></span>
+                                </button>
+                                <button type="button" class="btn btn-success" ng-click="model.updateForm(model.formName)">
+                                    <span class="glyphicon glyphicon-ok"></span>
+                                </button></td>
+                        </tr>
 
-            <tr ng-repeat="form in forms">
-                <td><a>{{form.title}} </a></td>
-                <td>
-                    <a ng-click="deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
-                    <a ng-click="selectForm($index)"><span class="glyphicon glyphicon-pencil"></span></a></td>
-            </tr>
-        </table>
+                       <tr ng-repeat="form in model.forms">
+                           <td><a>{{form.title}} </a></td>
+                           <td>
+                               <a ng-click="model.deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
+                               <a ng-click="model.selectForm($index)"><span class="glyphicon glyphicon-pencil"></span></a></td>
+                       </tr>
+                </table>
 
-    </div>
-</div>
+             </div>
+        </div>
 </body>
 
 </html>
+
