--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -6,46 +6,47 @@
 <div class="container-fluid">
     <div class="row">
             <h1 class="page-header">Profile</h1>
-            <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
+            <div ng-show="model.message" class="alert alert-success" role="alert">
+                {{model.message}}</div>
             <form class="form-horizontal">
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="uname"> UserName</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" placeholder="UserName" id="uname" ng-model="userName">
+                        <input type="text" class="form-control" placeholder="UserName" id="uname" ng-model="model.user.username">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="password">Password</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" placeholder="Password" id="password" ng-model="password">
+                        <input type="text" class="form-control" placeholder="Password" id="password" ng-model="model.user.password">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="fname">First Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" placeholder="First Name" id="fname" ng-model="firstName">
+                        <input type="text" class="form-control" placeholder="First Name" id="fname" ng-model="model.user.firstName">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="lname">Last Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" placeholder="Last Name" id="lname" ng-model="lastName">
+                        <input type="text" class="form-control" placeholder="Last Name" id="lname" ng-model="model.user.lastName">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="email">Email</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" placeholder="youremail@domain.com" id="email" ng-model="email">
+                        <input type="email" class="form-control" placeholder="youremail@domain.com" id="email" ng-model="model.user.email">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="button" class="btn btn-primary" ng-click="update(userName,password,firstName,lastName,email)">Update</button>
+                        <button type="button" class="btn btn-primary" ng-click="model.update(model.user)">Update</button>
                     </div>
                 </div>
 
