--- a/public/assignment/client/views/users/register.view.html
+++ b/public/assignment/client/views/users/register.view.html
@@ -1,14 +1,14 @@
 
 <html>
 <body ng-controller="RegisterController">
-<div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
+<div ng-show="model.message" class="alert alert-success" role="alert">{{model.message}}</div>
  <h1 class="page-header">Register</h1>
             <form class="form-horizontal">
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="uname"> UserName</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" placeholder="Username"
-                               id="uname" ng-model="user.username" >
+                               id="uname" ng-model="model.user.username" >
                     </div>
                 </div>
 
@@ -16,7 +16,7 @@
                     <label class="col-sm-2 control-label" for="password">Password</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" placeholder="Password"
-                               id="password" ng-model="user.password">
+                               id="password" ng-model="model.user.password">
                     </div>
                 </div>
 
@@ -24,7 +24,7 @@
                     <label class="col-sm-2 control-label" for="vpw">Verify Password</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" placeholder="Verify Password"
-                               id="vpw" ng-model="user.password2">
+                               id="vpw" ng-model="model.user.password2">
                     </div>
                 </div>
 
@@ -32,13 +32,13 @@
                     <label class="col-sm-2 control-label" for="email">Email</label>
                     <div class="col-sm-10">
                         <input type="email" class="form-control" placeholder="youremail@domain.com"
-                               id="email" ng-model="user.email">
+                               id="email" ng-model="model.user.email">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a ng-click="register(user)" class="btn btn-primary" role="button">Register</a>
+                        <a ng-click="model.register(model.user)" class="btn btn-primary" role="button">Register</a>
                     </div>
                 </div>
 
