--- a/public/project/client/views/details/details.view.html
+++ b/public/project/client/views/details/details.view.html
@@ -11,10 +11,6 @@
 Name: {{details.name}}
 </div>
 
-
-<div>
-    Id: {{details.id}}
-</div>
 <div>
     Album: {{details.album.name}}
 </div>
@@ -37,33 +33,16 @@ Name: {{details.name}}
 
 
 
-        <audio ng-src="{{details.preview_url | trusted}}" audioplayer controls >
+        <audio ng-src="{{details.preview_url | trusted}}" audioplayer controls>
     </audio>
 
-<div ng-show="currentUser">
-            <button class="btn btn-primary"
-                    ng-click="model.favorite(details.id)">
-    <span ng-show="model.song.likes.indexOf(currentUser._id) > -1"
-          class="glyphicon glyphicon-star"></span>
-    <span ng-show="!model.song || !model.song.likes || model.song.likes.indexOf(currentUser._id) == -1"
-          class="glyphicon glyphicon-star-empty"></span>
+
+            <button ng-show="currentUser" class="btn btn-primary" ng-click="likeSong(details.name)">
+
+                <span class="glyphicon glyphicon-star"></span>
+
             </button>
 
-</div>
-
-
-
-        </div>
-
-        <div ng-if="model.song.userLikes">
-            <h4>Other Users that Like This Movie</h4>
-            <ul>
-                <li ng-repeat="user in model.song.userLikes">
-                    <a href="#/profile/{{user.username}}">
-                        {{user.username}}
-                    </a>
-                </li>
-            </ul>
         </div>
 
 </body>
