--- a/public/project/client/views/header/header.view.html
+++ b/public/project/client/views/header/header.view.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="HeaderController as model">
-    <div class="container-fluid">
+ <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="HeaderController">
+     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
@@ -9,53 +9,27 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/home">My Music</a>
+            <a class="navbar-brand" href="#/home">myMusic</a>
         </div>
-
         <div id="navbar" class="navbar-collapse collapse">
-
-
-            <ul class="nav navbar-nav navbar-right check-sidebar">
-
-                <li ng-class="{'active': $location.url() == '/home'}"
-                    data-toggle="collapse" data-target=".navbar-collapse.in" class="add-under-line">
-                    <a href="#/home">Home</a></li>
-
-                <!-- <li ng-show="currentUser"  ng-class="{'active': $location.url() == '/profile'}"
-                     data-toggle="collapse" data-target=".navbar-collapse.in" class="add-under-line">
-                     <a href="#/profile/"+currentUser._id>Profile</a></li> -->
-
-                <!-- <li ng-show="currentUser.roles.indexOf('admin') >= 0" ng-class="{'active': $location.url() == '/admin'}"
-                     data-toggle="collapse" data-target=".navbar-collapse.in" class="add-under-line">
-                     <a href="#/admin">Admin</a></li>  -->
-            </ul>
-
-
             <ul class="nav navbar-nav navbar-right">
-                <li ng-hide="currentUser" ng-class="{'active' : $location.url() == '/register'}"
-                    data-toggle="collapse" data-target=".navbar-collapse.in">
-                    <a href="#/register" class="add-under-line"> Register </a></li>
-
-                <li ng-hide="currentUser" ng-class="{'active' : $location.url() == '/login'}"
-                    data-toggle="collapse" data-target=".navbar-collapse.in">
+                <li ng-hide="currentUser" ng-class="{'active' : $location.url() == '/register'}">
+                    <a href="#/register" class="add-under-line"> Register</a></li>
+                <li ng-hide="currentUser" ng-class="{'active' : $location.url() == '/login'}">
                     <a href="#/login" class="add-under-line">Login</a></li>
+                <li ng-show="currentUser" ng-class="{'active' : $location.url() == '/profile'}">
+                    <a href="#/profile" class="add-under-line"> {{currentUser.username}} </a></li>
+                <li ng-show="currentUser"><a href="#/home" class="add-under-line" ng-click="logout()">LogOut</a></li>
 
-                <li ng-show="currentUser" ng-class="{'active' : $location.url() == '/profile/:userId'}"
-                    data-toggle="collapse" data-target=".navbar-collapse.in">
-                    <a href="#/profile/{{currentUser._id}}" class="add-under-line"> {{currentUser.username}}</a></li>
 
-
-                <li ng-show="currentUser" data-toggle="collapse" data-target=".navbar-collapse.in">
-                    <a href="#/home" class="add-under-line" ng-click="model.logout()">Logout</a></li>
-
-                <li ng-class="{'active' : $location.url() == '/search'}" data-toggle="collapse"
-                    data-target=".navbar-collapse.in">
+                <li ng-class="{'active' : $location.url() == '/search'}">
                     <a href="#/search" class="add-under-line">
                         <span class="glyphicon glyphicon-search"></span>
                         Search</a></li>
             </ul>
         </div>
     </div>
-</nav>
+  </nav>
 </body>
 </html>
+
