--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -1,120 +1,18 @@
-<!--<nav class="navbar navbar-default" role="navigation-demo" id="demo-navbar">-->
-    <!--<div ng-controller="HeaderController" ng-include src="'../client/views/header/header.view.html'">-->
+<!DOCTYPE html>
+<html lang="en">
+<body>
 
-    <!--</div>-->
-<!--</nav>-->
-<!--<div class="alert alert-danger landing-alert">-->
-<!--<div class="container text-center">-->
-<!--<h5>Find all the details you need to make your vacation a truly memorable one ...!!!!!</h5>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div  ng-controller="NavbarController" ng-include src="'../client/views/navbar/navbar.view.html'">-->
-<!--</div>-->
-<div class="wrapper">
-    <div id="carousel">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <div class="carousel slide" data-ride="carousel">
-
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="../client/views/assets/paper_img/p1.jpg"  alt="Awesome Image">
-                    </div>
-                    <div class="item">
-                        <img src="../client/views/assets/paper_img/p1.jpg"  alt="Awesome Image">
-                    </div>
-                    <div class="item">
-                        <img src="../client/views/assets/paper_img/p3.jpeg" alt="Awesome Image">
-                    </div>
-                </div>
-
-                 <!--Controls-->
-                <!--<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">-->
-                    <!--<span class="fa fa-angle-left"></span>-->
-                <!--</a>-->
-                <!--<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">-->
-                    <!--<span class="fa fa-angle-right"></span>-->
-                <!--</a>-->
+<div class="container-fluid">
+    <div class="row">
+            <h1 class="page-header">Welcome!</h1>
+            <p align="justify">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
             </div>
-        </div> <!-- end carousel -->
-    </div>
-        <div class="main">
-            <div class="section section-dark text-center landing-section" style="padding-top: 50px">
-                <div class="container-fluid">
-                    <h2>Here are the hot topics</h2>
-                    <div ng-repeat="trip in trips">
-                    <div class="col-md-3">
-                      <!--  <div class="team-player">
-                           <a href="#/trip/{{trips[$index]._id}}"><img src="../client/views/assets/paper_img/unnamed.png" alt="Thumbnail Image" class="img-circle img-responsive"></a>
-                            <h5 style="margin-bottom: 5px"><a href="#/trip/{{trips[$index]._id}}">{{trip.title}}</a></h5>
-                            <p>{{trip.summary}}</p>-->
-                        </div>
-                    </div>
-                    <!--<div class="col-md-3">-->
-                        <!--<div class="team-player">-->
-                            <!--<img src="../client/views/assets/paper_img/flume.jpg" alt="Thumbnail Image" class="img-circle img-responsive">-->
-                            <!--<h5><a href="#/details">New Hampshire</a> <br /><small class="text-muted">Fall</small></h5>-->
-                            <!--<p>You can write here details about one of your team members. You can give more details about what they do. Feel free to add some <a href="#">links</a> for people to be able to follow them outside the site.</p>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-3">-->
-                        <!--<div class="team-player">-->
-                            <!--<img src="../client/views/assets/paper_img/banks.jpg" alt="Thumbnail Image" class="img-circle img-circle img-responsive">-->
-                            <!--<h5>Mount batuta <br /><small class="text-muted">Hiking</small></h5>-->
-                            <!--<p>You can write here details about one of your team members. You can give more details about what they do. Feel free to add some <a href="#">links</a> for people to be able to follow them outside the site.</p>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-3">-->
-                        <!--<div class="team-player">-->
-                            <!--<img src="../client/views/assets/paper_img/chet_faker_2.jpg" alt="Thumbnail Image" class="img-circle img-responsive">-->
-                            <!--<h5>Rhode Island <br /><small class="text-muted">Skiing</small></h5>-->
-                            <!--<p>You can write here details about one of your team members. You can give more details about what they do. Feel free to add some <a href="#">links</a> for people to be able to follow them outside the site.</p>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    </div>
-                </div>
-            </div>
-
-            <!--<div class="section landing-section">-->
-                <!--<div class="container">-->
-                    <!--<div class="row">-->
-                        <!--<div class="col-md-8 col-md-offset-2">-->
-                            <!--<h2 class="text-center">Keep in touch?</h2>-->
-                            <!--<form class="contact-form">-->
-                                <!--<div class="row">-->
-                                    <!--<div class="col-md-6">-->
-                                        <!--<label>Name</label>-->
-                                        <!--<input class="form-control" placeholder="Name">-->
-                                    <!--</div>-->
-                                    <!--<div class="col-md-6">-->
-                                        <!--<label>Email</label>-->
-                                        <!--<input class="form-control" placeholder="Email">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<label>Message</label>-->
-                                <!--<textarea class="form-control" rows="4" placeholder="Tell us your thoughts and feelings..."></textarea>-->
-                                <!--<div class="row">-->
-                                    <!--<div class="col-md-4 col-md-offset-4">-->
-                                        <!--<button class="btn btn-danger btn-block btn-lg btn-fill">Send Message</button>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</form>-->
-                        <!--</div>-->
-                    <!--</div>-->
-
-                <!--</div>-->
-            <!--</div>-->
         </div>
-    </div>
-
 </div>
-<!--<div  ng-include src="'./views/footer/footer.view.html'">
 
-</div> -->
+</body>
+</html>
+
