--- a/public/project/client/views/users/login.view.html
+++ b/public/project/client/views/users/login.view.html
@@ -1,59 +1,38 @@
 <html>
+<body ng-controller="LoginController">
 
-<body>
-<div ng-controller="LoginController">
+<div class="container-fluid">
+    <div class="row">
 
-    <div class="wrapper">
-        <!--  <div class="login-background"> -->
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 ">
-                    <div ng-show="model.message" class="alert alert-success">{{model.message}}</div>
-                    <div class="register-card">
-                        <!--  <h1 class="page-header">Login</h1>
-                          <form class="form-horizontal">
-                              <div class="form-group">
-                                  <label class="col-sm-2 control-label" for="uname"> UserName</label>
-                                  <div class="col-sm-10">
-                                      <input type="text" class="form-control" placeholder="UserName" id="uname" ng-model="model.user.username">
-                                  </div>
-                              </div>
-
-                              <div class="form-group">
-                                  <label class="col-sm-2 control-label" for="password">Password</label>
-                                  <div class="col-sm-10">
-                                      <input type="password" class="form-control" placeholder="Password" id="password" ng-model="model.user.password">
-                                  </div>
-                              </div>
-
-                              <div class="form-group">
-                                  <div class="col-sm-offset-2 col-sm-10">
-                                      <a class="btn btn-primary" role="button" ng-click="model.login(model.user)">Login</a>
-                                  </div>
-                              </div>
-                          </form> -->
-
-                        <h3 class="title">Welcome</h3>
-                        <form class="register-form">
-                            <label>Username</label>
-                            <input ng-model="model.user.username" type="text" class="form-control" placeholder="Username">
-
-                            <label>Password</label>
-                            <input ng-model="model.user.password" type="password" class="form-control" placeholder="Password">
-
-                            <button ng-click="model.login(model.user)" class="btn btn-danger btn-block">Login</button>
-                        </form>
-                    </div>
+        <div ng-show="model.message" class="alert alert-success">{{model.message}}</div>
+        <h1 class="page-header">Login</h1>
+        <form class="form-horizontal">
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="uname"> UserName</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" placeholder="UserName" id="uname" ng-model="model.user.username">
                 </div>
             </div>
-        </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="password">Password</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" placeholder="Password" id="password" ng-model="model.user.password">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <a class="btn btn-primary" role="button" ng-click="model.login(model.user)">Login</a>
+                </div>
+            </div>
+
+        </form>
     </div>
 
+</div>
+</div>
 
-</div>
-</div>
 </body>
 </html>
 
